fix: correct header link spacing and adjust action box gap and padding.

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ ul {
     padding: 0px;
     margin: 0px;
     list-style: none;
-    gap: 16px;
+    gap: 24px;
     flex-shrink: 0;
     font-size: 18px;
     color: #E5E7Eb;
@@ -174,6 +174,8 @@ img {
     justify-content: space-around;
     align-items: center;
     color:#F9FAF8;
+    gap: 30px;
+    padding: auto 30px;
 }
 
 .container-action .content .textbox {
